--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h3 class="major">Bonjour, c'est avec plaisir que nous mettons notre villa à disposition. Nous l'avons réalisée avec notre cœur, et espérons que vous pourrez y passer un séjour agréable et qu'il vous procurera autant de bonheur qu'à nous!</h3>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h3 class="major">C'est avec plaisir que nous mettons notre villa à disposition. Nous l'avons réalisée avec notre cœur, et espérons que vous pourrez y passer un séjour agréable et qu'il vous procurera autant de bonheur qu'à nous!</h3>
+									<p>Adoptez le rythme des Antilles et profitez de cette magnifique île, que vous soyez sportifs (randonnées vers les magnifiques cascades, plongées...), plages ( Malendure à la recherche des tortues ou juste pour faire bronzette...) ou apéros entre amis ( ah le rhum… Toute une histoire...),  nous vous souhaitons un excellent séjour!<br>
+									Des plages magnifiques (Malendure, anse Leroux, anse de la Perle…), tant pour le snorkeling que le Farniente, des randonnées époustouflantes (chutes du carbet, la lézarde, trou à diable…), plongée sous marine (club les heures saines à proximité)...
+									</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
