--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 									<h1 class="major">Bonjour, bienvenue<br />
 									à Calypso Bay</h1>
 									<p>Jolie villa bois d’architecte neuve, avec piscine à débordement et vue pleine mer sur les ilets pigeon et la réserve Cousteau.<br>
-									Villa à vivre en intérieur comme en extérieur, avec des prestations de qualité. Quartier calme et très agréable.</p>
+									Villa à vivre en intérieur comme en extérieur, avec des prestations de qualité.<br>
+									Quartier calme et très agréable.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
