--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
 											<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
 											<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li>
 											<li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li>
+											<li class="icon brands fa-airbnb"><a href="https://www.airbnb.fr/users/show/TON_ID_AIRBNB" target="_blank" rel="noopener">Airbnb</a></li>
+											<li class="icon brands fa-b"><a href="https://www.booking.com/Share-7OU47I" target="_blank" rel="noopener">Booking</a></li>
+
 										</ul>
 									</div>
 								</div>
