--- a/index.html
+++ b/index.html
@@ -132,11 +132,8 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li>
-											<li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-airbnb"><a href="https://www.airbnb.fr/users/show/TON_ID_AIRBNB" target="_blank" rel="noopener">Airbnb</a></li>
-											<li class="icon brands fa-b"><a href="https://www.booking.com/Share-7OU47I" target="_blank" rel="noopener">Booking</a></li>
+											<li class="icon brands fa-airbnb"><a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener">Airbnb</a></li>
+											<li class="icon fa-solid fa-b"><a href="https://www.booking.com/Share-7OU47I" target="_blank" rel="noopener">Booking</a></li>
 
 										</ul>
 									</div>
