--- a/index.html
+++ b/index.html
@@ -133,9 +133,16 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon brands fa-airbnb"><a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener">Airbnb</a></li>
-											<li class="icon fa-solid fa-b"><a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener">Booking</a></li>
-
+											<li>
+											  <a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener">
+											    <i class="fa-brands fa-airbnb"></i> Airbnb
+											  </a>
+											</li>
+											<li>
+											  <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener">
+											    <i class="fa-solid fa-b"></i> Booking
+											  </a>
+											</li>
 										</ul>
 									</div>
 								</div>
