--- a/index.html
+++ b/index.html
@@ -133,15 +133,11 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li>
-											  <a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener">
-											    <i class="fa-brands fa-airbnb"></i> Airbnb
-											  </a>
+											<li class="icon brands fa-airbnb">
+											  <a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener">Airbnb</a>
 											</li>
-											<li>
-											  <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener">
-											    <i class="fa-solid fa-b"></i> Booking
-											  </a>
+											<li class="icon fa-solid fa-b">
+											  <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener">Booking</a>
 											</li>
 										</ul>
 									</div>
