--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
-										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
-										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+										<li><span class="icon fa-solid fa-umbrella-beach"><span class="label">Plage</span></span></li>
+										<li><span class="icon fa-solid fa-water-ladder"><span class="label">Piscine</span></span></li>
+										<li><span class="icon fa-solid fa-wifi"><span class="label">Wi-Fi</span></span></li>
+										<li><span class="icon fa-solid fa-camera-retro"><span class="label">Photo</span></span></li>
+										<li><span class="icon fa-solid fa-wheelchair-move"><span class="label">Accès</span></span></li>
+										<li><span class="icon fa-solid fa-grill-hot"><span class="label">Barbecue</span></span></li>
 									</ul>
 								</div>
 							</section>
