--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-solid fa-umbrella-beach"><span class="label">Plage</span></span></li>
-										<li><span class="icon fa-solid fa-water-ladder"><span class="label">Piscine</span></span></li>
-										<li><span class="icon fa-solid fa-wifi"><span class="label">Wi-Fi</span></span></li>
-										<li><span class="icon fa-solid fa-camera-retro"><span class="label">Photo</span></span></li>
-										<li><span class="icon fa-solid fa-wheelchair-move"><span class="label">Accès</span></span></li>
-										<li><span class="icon fa-solid fa-fire-burner"><span class="label">Barbecue</span></span></li>
+										<li><span class="icon fa fa-home"><span class="label">Maison</span></span></li>
+										<li><span class="icon fa fa-bed"><span class="label">Chambre</span></span></li>
+										<li><span class="icon fa fa-bath"><span class="label">Salle de bain</span></span></li>
+										<li><span class="icon fa fa-wifi"><span class="label">Wi-Fi</span></span></li>
+										<li><span class="icon fa fa-umbrella"><span class="label">Plage</span></span></li>
+										<li><span class="icon fa fa-car"><span class="label">Parking</span></span></li>
 									</ul>
 								</div>
 							</section>
