--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="inner">
+								<div class="inner">
 									<ul class="grid-icons three connected">
 										<li><span class="icon fa fa-home"><span class="label">Maison</span></span></li>
 										<li><span class="icon fa fa-bed"><span class="label">Chambre</span></span></li>
-										<li><span class="icon fa fa-bath"><span class="label">Salle de bain</span></span></li>
+										<li><span class="icon fa fa-bath"><span class="label">Bain</span></span></li>
 										<li><span class="icon fa fa-wifi"><span class="label">Wi-Fi</span></span></li>
 										<li><span class="icon fa fa-umbrella"><span class="label">Plage</span></span></li>
 										<li><span class="icon fa fa-car"><span class="label">Parking</span></span></li>
