--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 										<form method="post" action="#">
 											<div class="fields">
 												<div class="field half">
-													<label for="name">Name</label>
+													<label for="name">Nom</label>
 													<input type="text" name="name" id="name" />
 												</div>
 												<div class="field half">
@@ -128,7 +128,7 @@
 												</div>
 											</div>
 											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="button primary" /></li>
+												<li><input type="submit" value="Envoyer" class="button primary" /></li>
 											</ul>
 										</form>
 									</div>
