--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Pour toute demande de renseignements ou n'importe quelle question. Vous pouvez aussi vous adresser à notre concièrge en ligne (Propulsé par ChatGPT), qui pourrat répondre à pas mal de vos questions sur notre bien, ses équipements et les activitées à proximitée.</p>
+									<p>Pour toute demande de renseignements ou n'importe quelle question. Vous pouvez aussi vous adresser à notre <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay">concièrge en ligne</a> (Propulsé par ChatGPT), qui pourrat répondre à pas mal de vos questions sur notre bien, ses équipements et les activitées à proximitée.</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
