--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
 										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
 									</div>
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+									<div class="group span-3">
+										<a href="images/gallery/fulls/10.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/11.jpg" class="image filtered span-2" data-position="center"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/12.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/12.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/13.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/13.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/14.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/14.jpg" alt="" /></a>
+									</div>
 								</div>
 							</section>
 
