--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
 									</div>
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-									<div class="group span-3">
-										<a href="images/gallery/fulls/10.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/11.jpg" class="image filtered span-2" data-position="center"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/12.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/12.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/13.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/13.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/14.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/14.jpg" alt="" /></a>
+									<div class="group span 4-5">
+										<a href="images/gallery/fulls/01.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/02.jpg" class="image filtered span-2" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/04.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/05.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
 									</div>
 								</div>
 							</section>
