--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
 									</div>
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-									<div class="group span-3">
+									<div class="group span 4-5">
 										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/01.jpg" class="image filtered span-2" data-position="center"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/05.jpg" class="image filtered span-1" data-position="center"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
