--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Elit integer</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Galerie photos</h2>
+									<p>Vous-y trouverez un large choix de photos de la villa sous toutes ces coûtures</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
