--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Bonjour, bienvenue<br />
+									<h1 class="major">Bienvenue<br />
 									à Calypso Bay</h1>
 									<p>Jolie villa bois d’architecte neuve, avec piscine à débordement et vue pleine mer sur les ilets pigeon et la réserve Cousteau.<br>
 									Villa à vivre en intérieur comme en extérieur, avec des prestations de qualité.<br>
