--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h3 class="major">C'est avec plaisir que nous mettons notre villa à disposition. Nous l'avons réalisée avec notre cœur, et espérons que vous pourrez y passer un séjour agréable et qu'il vous procurera autant de bonheur qu'à nous!</h3>
-									<p>Adoptez le rythme des Antilles et profitez de cette magnifique île, que vous soyez sportifs (randonnées vers les magnifiques cascades, plongées...), plages (Malendure à la recherche des tortues ou juste pour faire bronzette...) ou apéros entre amis (ah le rhum… Toute une histoire...),  nous vous souhaitons un excellent séjour!<br>
-									Des plages magnifiques (Malendure, anse Leroux, anse de la Perle…), tant pour le snorkeling que le Farniente, des randonnées époustouflantes (chutes du carbet, la lézarde, trou à diable…), plongée sous marine (club les heures saines à proximité)...
+									<h3 class="major">C’est avec grand plaisir que nous vous accueillons dans notre villa, conçue avec passion et soin. Nous espérons sincèrement que votre séjour y sera des plus agréables et qu’il vous apportera autant de bonheur qu’il nous en procure.</h3>
+									<p>
+									Prenez le temps d’adopter le rythme des Antilles et de découvrir toutes les richesses de cette île exceptionnelle. Que vous soyez amateurs de randonnée (vers les cascades spectaculaires), passionnés de plongée, adeptes du farniente sur les plages paradisiaques comme Malendure ou Anse de la Perle, ou encore friands de moments conviviaux autour d’un verre (le rhum local mérite qu’on s’y attarde !), nous vous souhaitons un séjour inoubliable.<br>
+									Explorez des plages de rêve (Malendure, Anse Leroux, Anse de la Perle…), partez à l’aventure lors de randonnées remarquables (chutes du Carbet, La Lézarde, Trou à Diable…), ou découvrez les fonds marins grâce aux clubs de plongée à proximité, comme Les Heures Saines.
 									</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
