--- a/index.html
+++ b/index.html
@@ -114,9 +114,13 @@
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
-								<div class="intro color4">
-									<h2 class="major">Contact</h2>
-									<p>Pour toute demande de renseignements ou n'importe quelle question. Vous pouvez aussi vous adresser à notre <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay">concièrge en ligne</a> (Propulsé par ChatGPT), qui pourrat répondre à pas mal de vos questions sur notre bien, ses équipements et les activitées à proximitée.</p>
+								<div class="intro color4"><h2 class="major">Contact</h2>
+									<p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter. Vous pouvez également dialoguer avec notre concierge en ligne, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.</p>
+									<ul class="actions">
+									  <li>
+									    <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contacter le concierge</a>
+									  </li>
+									</ul>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
