--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4"><h2 class="major">Contact</h2>
-									<p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter. Vous pouvez également dialoguer avec notre concierge en ligne, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.</p>
+									<p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter. Vous pouvez également échanger avec notre concierge en ligne, un assistant intelligent propulsé par ChatGPT, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.</p>
 									<ul class="actions">
 									  <li>
 									    <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contacter le concierge</a>
