--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 								<div class="inner">
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa fa-home"><span class="label">Maison</span></span></li>
-										<li><span class="icon fa fa-bed"><span class="label">Chambre</span></span></li>
-										<li><span class="icon fa fa-bath"><span class="label">Bain</span></span></li>
-										<li><span class="icon fa fa-wifi"><span class="label">Wi-Fi</span></span></li>
-										<li><span class="icon fa fa-umbrella"><span class="label">Plage</span></span></li>
-										<li><span class="icon fa fa-car"><span class="label">Parking</span></span></li>
+										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
+										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
+										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
+										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
+										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
+										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
 									</ul>
 								</div>
 							</section>
