--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 										</form>
 									</div>
 									<div class="span-1-5">
+										<p>Consultez les avis laissés par nos précédents voyageurs sur les plateformes :</p>
 										<ul class="contact-icons color1">
 											<li class="icon brands fa-airbnb">
 											  <a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener">Airbnb</a>
