--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
-								<div class="intro color4"><h2 class="major">Contact</h2>
+								<div class="intro color4"><h2 class="major">Contactez-nous</h2>
 									<p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter. Vous pouvez également échanger avec notre concierge en ligne, un assistant intelligent propulsé par ChatGPT, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.</p>
 									<ul class="actions">
 									  <li>
