--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 								<div class="inner">
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
-										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
-										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+										<li><span class="icon solid fa-home"><span class="label">Maison</span></span></li>
+										<li><span class="icon solid fa-bed"><span class="label">Chambre</span></span></li>
+										<li><span class="icon solid fa-bath"><span class="label">Salle de bain</span></span></li>
+										<li><span class="icon solid fa-wifi"><span class="label">Wi-Fi</span></span></li>
+										<li><span class="icon solid fa-umbrella"><span class="label">Terrasse</span></span></li>
+										<li><span class="icon solid fa-car"><span class="label">Parking</span></span></li>
 									</ul>
 								</div>
 							</section>
