--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 										<li><span class="icon solid fa-bed"><span class="label">Chambre</span></span></li>
 										<li><span class="icon solid fa-bath"><span class="label">Salle de bain</span></span></li>
 										<li><span class="icon solid fa-wifi"><span class="label">Wi-Fi</span></span></li>
-										<li><span class="icon solid fa-umbrella"><span class="label">Terrasse</span></span></li>
-										<li><span class="icon solid fa-car"><span class="label">Parking</span></span></li>
+										<li><span class="icon solid fa-umbrella-beach"><span class="label">Terrasse</span></span></li>
+										<li><span class="icon solid fa-parking"><span class="label">Parking</span></span></li>
 									</ul>
 								</div>
 							</section>
