--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 								<div class="inner">
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon solid fa-home"><span class="label">Maison</span></span></li>
-										<li><span class="icon solid fa-bed"><span class="label">Chambre</span></span></li>
+										<li><span class="icon solid fa-fan"><span class="label">Maison</span></span></li>
+										<li><span class="icon solid fa-swimming-pool"><span class="label">Chambre</span></span></li>
 										<li><span class="icon solid fa-bath"><span class="label">Salle de bain</span></span></li>
 										<li><span class="icon solid fa-wifi"><span class="label">Wi-Fi</span></span></li>
 										<li><span class="icon solid fa-umbrella-beach"><span class="label">Terrasse</span></span></li>
