--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<ul class="grid-icons three connected">
 										<li><span class="icon solid fa-fan"><span class="label">Maison</span></span></li>
 										<li><span class="icon solid fa-swimming-pool"><span class="label">Chambre</span></span></li>
-										<li><span class="icon solid fa-bath"><span class="label">Salle de bain</span></span></li>
+										<li><span class="icon solid fa-hiking"><span class="label">Salle de bain</span></span></li>
 										<li><span class="icon solid fa-wifi"><span class="label">Wi-Fi</span></span></li>
 										<li><span class="icon solid fa-umbrella-beach"><span class="label">Terrasse</span></span></li>
 										<li><span class="icon solid fa-parking"><span class="label">Parking</span></span></li>
