--- a/index.html
+++ b/index.html
@@ -91,24 +91,66 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+									  <a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="center">
+									    <img src="images/gallery/thumbs/01.jpg" alt="Salon" />
+									    <div class="caption">Salon</div>
+									  </a>
+									  <a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center">
+									    <img src="images/gallery/thumbs/02.jpg" alt="Cuisine" />
+									    <div class="caption">Cuisine</div>
+									  </a>
+									  <a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="center">
+									    <img src="images/gallery/thumbs/03.jpg" alt="Espace repas" />
+									    <div class="caption">Espace repas</div>
+									  </a>
 									</div>
-									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/04.jpg" class="image filtered span-1-5" data-position="center">
+									  <img src="images/gallery/thumbs/04.jpg" alt="Chambre 1" />
+									  <div class="caption">Chambre 1</div>
+									</a>
 									<div class="group span-4-5">
-										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+									  <a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="center">
+									    <img src="images/gallery/thumbs/05.jpg" alt="Chambre 2" />
+									    <div class="caption">Chambre 2</div>
+									  </a>
+									  <a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center">
+									    <img src="images/gallery/thumbs/06.jpg" alt="Chambre 3" />
+									    <div class="caption">Chambre 3</div>
+									  </a>
+									  <a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="center">
+									    <img src="images/gallery/thumbs/07.jpg" alt="Salle de bain 1" />
+									    <div class="caption">Salle de bain 1</div>
+									  </a>
+									  <a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="center">
+									    <img src="images/gallery/thumbs/08.jpg" alt="Salle de bain 2" />
+									    <div class="caption">Salle de bain 2</div>
+									  </a>
 									</div>
-									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/09.jpg" class="image filtered span-1-5" data-position="center">
+									  <img src="images/gallery/thumbs/09.jpg" alt="Salle de bain 3" />
+									  <div class="caption">Salle de bain 3</div>
+									</a>
 									<div class="group span-4-5">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/05.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/12.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/13.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/14.jpg" alt="" /></a>
+									  <a href="images/gallery/fulls/10.jpg" class="image filtered span-1-5" data-position="center">
+									    <img src="images/gallery/thumbs/10.jpg" alt="Terrasse" />
+									    <div class="caption">Terrasse</div>
+									  </a>
+									  <a href="images/gallery/fulls/11.jpg" class="image filtered span-3" data-position="center">
+									    <img src="images/gallery/thumbs/11.jpg" alt="Jardin" />
+									    <div class="caption">Jardin</div>
+									  </a>
+									  <a href="images/gallery/fulls/12.jpg" class="image filtered span-1-5" data-position="center">
+									    <img src="images/gallery/thumbs/12.jpg" alt="Extérieur" />
+									    <div class="caption">Extérieur</div>
+									  </a>
+									  <a href="images/gallery/fulls/13.jpg" class="image filtered span-1-5" data-position="center">
+									    <img src="images/gallery/thumbs/13.jpg" alt="Piscine" />
+									    <div class="caption">Piscine</div>
+									  </a>
+									  <a href="images/gallery/fulls/14.jpg" class="image filtered span-1-5" data-position="center">
+									    <img src="images/gallery/thumbs/14.jpg" alt="Autres" />
+									    <div class="caption">Autres</div>
+									  </a>
 									</div>
 								</div>
 							</section>
