--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 									</a>
 									<div class="group span-4-5">
 									  <a href="images/gallery/fulls/11.jpg" class="image filtered span-3" data-position="center">
-									    <img src="images/gallery/thumbs/11.jpg" alt="Jardin" />
-									    <div class="caption">Jardin</div>
+									    <img src="images/gallery/thumbs/11.jpg" alt="Terasse" />
+									    <div class="caption">Terasse</div>
 									  </a>
 									  <a href="images/gallery/fulls/10.jpg" class="image filtered span-1-5" data-position="center">
-									    <img src="images/gallery/thumbs/10.jpg" alt="Terrasse" />
-									    <div class="caption">Terrasse</div>
+									    <img src="images/gallery/thumbs/10.jpg" alt="Jardin" />
+									    <div class="caption">Jardin</div>
 									  </a>
 									  <a href="images/gallery/fulls/12.jpg" class="image filtered span-1-5" data-position="center">
 									    <img src="images/gallery/thumbs/12.jpg" alt="Extérieur" />
