--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									Explorez des plages de rêve (Malendure, Anse Leroux, Anse de la Perle…), partez à l’aventure lors de randonnées remarquables (chutes du Carbet, La Lézarde, Trou à Diable…), ou découvrez les fonds marins grâce aux clubs de plongée à proximité, comme Les Heures Saines.
 									</p>
 								</div>
-								<div class="image filtered tinted" data-position="top left">
+								<div class="image filtered tinted" data-position="center">
 									<img src="images/pic02.jpg" alt="" />
 								</div>
 							</section>
