--- a/index-test.html
+++ b/index-test.html
@@ -13,19 +13,76 @@
     <div id="page-wrapper">
       <div id="wrapper">
 
-        <!-- Panel Galerie -->
+        <!-- Panel -->
         <section class="panel">
           <div class="intro color2">
             <h2 class="major">Galerie photos</h2>
-            <p>Découvrez la villa en images, pièce par pièce.</p>
+            <p>Découvrez la villa en images !<br>
+            Cliquez simplement sur une photo pour lancer un diaporama et explorer chaque pièce ou espace sous tous ses angles.</p>
           </div>
           <div class="gallery">
-            <img src="images/gallery/thumbs/01.jpg" data-room="salon" data-index="0" alt="Salon 1">
-            <img src="images/gallery/thumbs/02.jpg" data-room="salon" data-index="1" alt="Salon 2">
-            <img src="images/gallery/thumbs/03.jpg" data-room="cuisine" data-index="0" alt="Cuisine 1">
-            <img src="images/gallery/thumbs/04.jpg" data-room="cuisine" data-index="1" alt="Cuisine 2">
-            <img src="images/gallery/thumbs/05.jpg" data-room="chambre1" data-index="0" alt="Chambre 1-1">
-            <img src="images/gallery/thumbs/06.jpg" data-room="chambre1" data-index="1" alt="Chambre 1-2">
+            <div class="group span-3">
+              <a href="#" class="image filtered span-3" data-room="Salon" data-position="center">
+                <img src="images/gallery/thumbs/01.jpg" alt="Salon" />
+                <div class="caption">Salon</div>
+              </a>
+              <a href="#" class="image filtered span-1-5" data-room="Cuisine" data-position="center">
+                <img src="images/gallery/thumbs/02.jpg" alt="Cuisine" />
+                <div class="caption">Cuisine</div>
+              </a>
+              <a href="#" class="image filtered span-1-5" data-room="Espace-repas" data-position="center">
+                <img src="images/gallery/thumbs/03.jpg" alt="Espace repas" />
+                <div class="caption">Espace repas</div>
+              </a>
+            </div>
+            <a href="#" class="image filtered span-1-5" data-room="Chambre1" data-position="center">
+              <img src="images/gallery/thumbs/04.jpg" alt="Chambre 1" />
+              <div class="caption">Chambre 1</div>
+            </a>
+            <div class="group span-4-5">
+              <a href="#" class="image filtered span-3" data-room="Chambre2" data-position="center">
+                <img src="images/gallery/thumbs/05.jpg" alt="Chambre 2" />
+                <div class="caption">Chambre 2</div>
+              </a>
+              <a href="#" class="image filtered span-1-5" data-room="Chambre3" data-position="center">
+                <img src="images/gallery/thumbs/06.jpg" alt="Chambre 3" />
+                <div class="caption">Chambre 3</div>
+              </a>
+              <a href="#" class="image filtered span-1-5" data-room="SDB1" data-position="center">
+                <img src="images/gallery/thumbs/07.jpg" alt="Salle de bain 1" />
+                <div class="caption">Salle de bain 1</div>
+              </a>
+              <a href="#" class="image filtered span-3" data-room="SDB2" data-position="center">
+                <img src="images/gallery/thumbs/08.jpg" alt="Salle de bain 2" />
+                <div class="caption">Salle de bain 2</div>
+              </a>
+            </div>
+            <a href="#" class="image filtered span-1-5" data-room="SDB3" data-position="center">
+              <img src="images/gallery/thumbs/09.jpg" alt="Salle de bain 3" />
+              <div class="caption">Salle de bain 3</div>
+            </a>
+            <div class="group span-4-5">
+              <a href="#" class="image filtered span-3" data-room="Terasse" data-position="center">
+                <img src="images/gallery/thumbs/10.jpg" alt="Terrasse" />
+                <div class="caption">Terrasse</div>
+              </a>
+              <a href="#" class="image filtered span-1-5" data-room="Jardin" data-position="center">
+                <img src="images/gallery/thumbs/11.jpg" alt="Jardin" />
+                <div class="caption">Jardin</div>
+              </a>
+              <a href="#" class="image filtered span-1-5" data-room="Exterieur" data-position="center">
+                <img src="images/gallery/thumbs/12.jpg" alt="Extérieur" />
+                <div class="caption">Extérieur</div>
+              </a>
+              <a href="#" class="image filtered span-1-5" data-room="Piscine" data-position="center">
+                <img src="images/gallery/thumbs/13.jpg" alt="Piscine" />
+                <div class="caption">Piscine</div>
+              </a>
+              <a href="#" class="image filtered span-1-5" data-room="General" data-position="center">
+                <img src="images/gallery/thumbs/14.jpg" alt="Autres" />
+                <div class="caption">Autres</div>
+              </a>
+            </div>
           </div>
         </section>
 
