--- a/index-test.html
+++ b/index-test.html
@@ -89,12 +89,14 @@
         <!-- Lightbox -->
         <div id="lightbox" class="lightbox" style="display:none;">
           <span class="close" onclick="closeLightbox()">&times;</span>
+          <div id="lightbox-counter" style="color:white; margin-bottom: 1em; font-size: 1.2em;"></div>
           <img id="lightbox-img" src="" alt="">
           <div class="nav">
             <i class="fas fa-chevron-circle-left" onclick="prevImage()"></i>
             <i class="fas fa-chevron-circle-right" onclick="nextImage()"></i>
           </div>
         </div>
+
 
       </div>
     </div>
