--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 						        </div>
 						
 						
-						      </div>
-						    </div>
+						      <!-- </div>
+						    </div> -->
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
