--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 						              <div class="caption">Salle de bain 3</div>
 						            </a>
 						            <div class="group span-4-5">
-						              <a href="#" class="image filtered span-3" data-room="Terasse" data-position="center">
-						                <img src="images/gallery/thumbs/10.jpg" alt="Terrasse" />
-						                <div class="caption">Terrasse</div>
-						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Jardin" data-position="center">
-						                <img src="images/gallery/thumbs/11.jpg" alt="Jardin" />
+						              <a href="#" class="image filtered span-3" data-room="Jardin" data-position="center">
+						                <img src="images/gallery/thumbs/10.jpg" alt="Jardin" />
 						                <div class="caption">Jardin</div>
+						              </a>
+						              <a href="#" class="image filtered span-1-5" data-room="Terrasse" data-position="center">
+						                <img src="images/gallery/thumbs/11.jpg" alt="Terrasse" />
+						                <div class="caption">Terrasse</div>
 						              </a>
 						              <a href="#" class="image filtered span-1-5" data-room="Exterieur" data-position="center">
 						                <img src="images/gallery/thumbs/12.jpg" alt="Extérieur" />
