--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						                <img src="images/gallery/thumbs/13.jpg" alt="Piscine" />
 						                <div class="caption">Piscine</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="General" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Autres" data-position="center">
 						                <img src="images/gallery/thumbs/14.jpg" alt="Autres" />
 						                <div class="caption">Autres</div>
 						              </a>
