--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						                <img src="images/gallery/thumbs/10.jpg" alt="Jardin" />
 						                <div class="caption">Jardin</div>
 						              </a>
-						              <a href="#" class="image filtered span-1-5" data-room="Terrasse" data-position="center">
+						              <a href="#" class="image filtered span-1-5" data-room="Terasse" data-position="center">
 						                <img src="images/gallery/thumbs/11.jpg" alt="Terrasse" />
 						                <div class="caption">Terrasse</div>
 						              </a>
