--- a/index-test.html
+++ b/index-test.html
@@ -13,89 +13,51 @@
     <div id="page-wrapper">
       <div id="wrapper">
 
-        <!-- Panel -->
-        <section class="panel">
-          <div class="intro color2">
-            <h2 class="major">Galerie photos</h2>
-            <p>Découvrez la villa en images !<br>
-            Cliquez simplement sur une photo pour lancer un diaporama et explorer chaque pièce ou espace sous tous ses angles.</p>
-          </div>
-          <div class="gallery">
-            <div class="group span-3">
-              <a href="#" class="image filtered span-3" data-room="Salon" data-position="center">
-                <img src="images/gallery/thumbs/01.jpg" alt="Salon" />
-                <div class="caption">Salon</div>
-              </a>
-              <a href="#" class="image filtered span-1-5" data-room="Cuisine" data-position="center">
-                <img src="images/gallery/thumbs/02.jpg" alt="Cuisine" />
-                <div class="caption">Cuisine</div>
-              </a>
-              <a href="#" class="image filtered span-1-5" data-room="Espace-repas" data-position="center">
-                <img src="images/gallery/thumbs/03.jpg" alt="Espace repas" />
-                <div class="caption">Espace repas</div>
-              </a>
-            </div>
-            <a href="#" class="image filtered span-1-5" data-room="Chambre1" data-position="center">
-              <img src="images/gallery/thumbs/04.jpg" alt="Chambre 1" />
-              <div class="caption">Chambre 1</div>
-            </a>
-            <div class="group span-4-5">
-              <a href="#" class="image filtered span-3" data-room="Chambre2" data-position="center">
-                <img src="images/gallery/thumbs/05.jpg" alt="Chambre 2" />
-                <div class="caption">Chambre 2</div>
-              </a>
-              <a href="#" class="image filtered span-1-5" data-room="Chambre3" data-position="center">
-                <img src="images/gallery/thumbs/06.jpg" alt="Chambre 3" />
-                <div class="caption">Chambre 3</div>
-              </a>
-              <a href="#" class="image filtered span-1-5" data-room="SDB1" data-position="center">
-                <img src="images/gallery/thumbs/07.jpg" alt="Salle de bain 1" />
-                <div class="caption">Salle de bain 1</div>
-              </a>
-              <a href="#" class="image filtered span-3" data-room="SDB2" data-position="center">
-                <img src="images/gallery/thumbs/08.jpg" alt="Salle de bain 2" />
-                <div class="caption">Salle de bain 2</div>
-              </a>
-            </div>
-            <a href="#" class="image filtered span-1-5" data-room="SDB3" data-position="center">
-              <img src="images/gallery/thumbs/09.jpg" alt="Salle de bain 3" />
-              <div class="caption">Salle de bain 3</div>
-            </a>
-            <div class="group span-4-5">
-              <a href="#" class="image filtered span-3" data-room="Terasse" data-position="center">
-                <img src="images/gallery/thumbs/10.jpg" alt="Terrasse" />
-                <div class="caption">Terrasse</div>
-              </a>
-              <a href="#" class="image filtered span-1-5" data-room="Jardin" data-position="center">
-                <img src="images/gallery/thumbs/11.jpg" alt="Jardin" />
-                <div class="caption">Jardin</div>
-              </a>
-              <a href="#" class="image filtered span-1-5" data-room="Exterieur" data-position="center">
-                <img src="images/gallery/thumbs/12.jpg" alt="Extérieur" />
-                <div class="caption">Extérieur</div>
-              </a>
-              <a href="#" class="image filtered span-1-5" data-room="Piscine" data-position="center">
-                <img src="images/gallery/thumbs/13.jpg" alt="Piscine" />
-                <div class="caption">Piscine</div>
-              </a>
-              <a href="#" class="image filtered span-1-5" data-room="General" data-position="center">
-                <img src="images/gallery/thumbs/14.jpg" alt="Autres" />
-                <div class="caption">Autres</div>
-              </a>
-            </div>
-          </div>
-        </section>
-
-        <!-- Lightbox -->
-        <div id="lightbox" class="lightbox" style="display:none;">
-          <span class="close" onclick="closeLightbox()">&times;</span>
-          <div id="lightbox-counter" style="color:white; margin-bottom: 1em; font-size: 1.2em;"></div>
-          <img id="lightbox-img" src="" alt="">
-          <div class="nav">
-            <i class="fas fa-chevron-circle-left" onclick="prevImage()"></i>
-            <i class="fas fa-chevron-circle-right" onclick="nextImage()"></i>
-          </div>
-        </div>
+						<!-- Panel -->
+							<section class="panel color4-alt">
+								<div class="intro color4"><h2 class="major">Contactez-nous</h2>
+									<p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter. Vous pouvez également échanger avec Nestor, un assistant intelligent propulsé par ChatGPT, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.</p>
+									<ul class="actions">
+									  <li>
+									    <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contacter Nestor</a>
+									  </li>
+									</ul>
+								</div>
+								<div class="inner columns divided">
+									<div class="span-3-25">
+										<form method="post" action="#">
+											<div class="fields">
+												<div class="field half">
+													<label for="name">Nom</label>
+													<input type="text" name="name" id="name" />
+												</div>
+												<div class="field half">
+													<label for="email">Email</label>
+													<input type="email" name="email" id="email" />
+												</div>
+												<div class="field">
+													<label for="message">Message</label>
+													<textarea name="message" id="message" rows="4"></textarea>
+												</div>
+											</div>
+											<ul class="actions">
+												<li><input type="submit" value="Envoyer" class="button primary" /></li>
+											</ul>
+										</form>
+									</div>
+									<div class="span-1-5">
+										<p>Consultez les avis laissés par nos précédents voyageurs sur les plateformes :</p>
+										<ul class="contact-icons color1">
+											<li class="icon brands fa-airbnb">
+											  <a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener">Airbnb</a>
+											</li>
+											<li class="icon fa-solid fa-b">
+											  <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener">Booking</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</section>
 
 
       </div>
