--- a/index-test.html
+++ b/index-test.html
@@ -46,16 +46,41 @@
 										</form>
 									</div>
 									<div class="span-1-5">
-										<p>Consultez les avis laissés par nos précédents voyageurs sur les plateformes :</p>
-										<ul class="contact-icons color1">
-											<li class="icon brands fa-airbnb">
-											  <a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener">Airbnb</a>
-											</li>
-											<li class="icon fa-solid fa-b">
-											  <a href="https://www.booking.com/Share-51Qxi5" target="_blank" rel="noopener">Booking</a>
-											</li>
-										</ul>
+									  <p>Consultez les avis laissés par nos précédents voyageurs :</p>
+									
+									  <div class="review-score" style="margin-bottom: 1em;">
+									    <p>
+									      <i class="fab fa-airbnb" style="margin-right: 5px;"></i>
+									      Airbnb 
+									      <span class="stars">
+									        <i class="fas fa-star color1"></i>
+									        <i class="fas fa-star color1"></i>
+									        <i class="fas fa-star color1"></i>
+									        <i class="fas fa-star color1"></i>
+									        <i class="fas fa-star-half-alt color1"></i>
+									      </span>
+									      <span style="font-size: 0.9em;">(4,92/5)</span>
+									      <span style="font-size: 0.9em;">– 6 avis</span>
+									    </p>
+									  </div>
+									
+									  <div class="review-score">
+									    <p>
+									      <i class="fas fa-b" style="margin-right: 5px;"></i>
+									      Booking 
+									      <span class="stars">
+									        <i class="fas fa-star color1"></i>
+									        <i class="fas fa-star color1"></i>
+									        <i class="fas fa-star color1"></i>
+									        <i class="fas fa-star color1"></i>
+									        <i class="fas fa-star-half-alt color1"></i>
+									      </span>
+									      <span style="font-size: 0.9em;">(9,6/10)</span>
+									      <span style="font-size: 0.9em;">– 37 avis</span>
+									    </p>
+									  </div>
 									</div>
+
 								</div>
 							</section>
 
